--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,101 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-	id="WebApp_ID" version="2.5">
-  
-  <display-name>FinanceiroWeb</display-name>
-  
-  <!-- Spring Security -->
-  
-  	<resource-ref>
-  		<description>DataSource FinanceiroDB</description>
-  		<res-ref-name>jdbc/FinanceiroDB</res-ref-name>
-  		<res-type>javax.sql.DataSource</res-type>
-  		<res-auth>Container</res-auth>
-  	</resource-ref>
-  	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			/WEB-INF/applicationContext.xml
-			/WEB-INF/applicationContext-security.xml
-		</param-value>
-	</context-param>
-	
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	
-<!-- JavaServer Faces -->
-  
-  <servlet>
-  	<display-name>FacesServlet</display-name>
-  	<servlet-name>FacesServlet</servlet-name>
-  	<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-  	<load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>FacesServlet</servlet-name>
-  	<url-pattern>*.jsf</url-pattern>
-  </servlet-mapping>
-  
-  <context-param>
-  	<param-name>javax.faces.PROJECT_STAGE</param-name>
-  	<param-value>Development</param-value>
-  </context-param>
-  
-  <welcome-file-list>
-    <welcome-file>index.xhtml</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  
-  <filter>
-  	<filter-name>conexaoFilter</filter-name>
-  	<filter-class>financeiro.web.filter.ConexaoHibernateFilter</filter-class>
-  </filter>
-  
-  <filter-mapping>
-  	<filter-name>conexaoFilter</filter-name>
-  	<url-pattern>*.jsf</url-pattern>
-  </filter-mapping>
-  
-  <context-param>
-  	<param-name>com.sun.faces.expressionFactory</param-name>
-  	<param-value>com.sun.el.ExpressionFactoryImpl</param-value>  
-  </context-param>
-  
-  <!-- PrimeFaces -->
-  
-  <servlet>
-		<servlet-name>Resource Servlet</servlet-name>
-		<servlet-class>org.primefaces.resource.ResourceServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Resource Servlet</servlet-name>
-		<url-pattern>/primefaces_resource/*</url-pattern>
-	</servlet-mapping>
-	
-	<context-param>
-		<param-name>com.sun.faces.allowTextChildren</param-name>
-		<param-value>true</param-value>
-	</context-param>
-  
+<web-app id="WebApp_ID" version="2.5"
+ xmlns="http://java.sun.com/xml/ns/javaee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+ <display-name>FinanceiroWeb</display-name>
+ <context-param>
+  <param-name>com.sun.faces.allowTextChildren</param-name>
+  <param-value>true</param-value>
+ </context-param>
+ <context-param>
+  <param-name>com.sun.faces.expressionFactory</param-name>
+  <param-value>com.sun.el.ExpressionFactoryImpl</param-value>
+ </context-param>
+ <context-param>
+  <param-name>contextConfigLocation</param-name>
+  <param-value>/WEB-INF/applicationContext.xml
+			/WEB-INF/applicationContext-security.xml</param-value>
+ </context-param>
+ <context-param>
+  <param-name>javax.faces.PROJECT_STAGE</param-name>
+  <param-value>Development</param-value>
+ </context-param>
+ <filter>
+  <filter-name>springSecurityFilterChain</filter-name>
+  <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+ </filter>
+ <filter>
+  <filter-name>conexaoFilter</filter-name>
+  <filter-class>financeiro.web.filter.ConexaoHibernateFilter</filter-class>
+ </filter>
+ <filter-mapping>
+  <filter-name>springSecurityFilterChain</filter-name>
+  <url-pattern>/*</url-pattern>
+ </filter-mapping>
+ <filter-mapping>
+  <filter-name>conexaoFilter</filter-name>
+  <url-pattern>*.jsf</url-pattern>
+ </filter-mapping>
+ <filter-mapping>
+  <filter-name>conexaoFilter</filter-name>
+  <url-pattern>/webservice/*</url-pattern>
+ </filter-mapping>
+ <listener>
+  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+ </listener>
+ <listener>
+  <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
+ </listener>
+ <!-- JavaServer Faces -->
+ <servlet>
+  <display-name>FacesServlet</display-name>
+  <servlet-name>FacesServlet</servlet-name>
+  <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ <!-- PrimeFaces -->
+ <servlet>
+  <servlet-name>Resource Servlet</servlet-name>
+  <servlet-class>org.primefaces.resource.ResourceServlet</servlet-class>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ <servlet>
+  <description>Webservices do Financeiro</description>
+  <display-name>financeiroWS</display-name>
+  <servlet-name>financeiroWS</servlet-name>
+  <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>FacesServlet</servlet-name>
+  <url-pattern>*.jsf</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Resource Servlet</servlet-name>
+  <url-pattern>/primefaces_resource/*</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>financeiroWS</servlet-name>
+  <url-pattern>/webservice/financeiroWS</url-pattern>
+ </servlet-mapping>
+ <welcome-file-list>
+  <welcome-file>index.xhtml</welcome-file>
+  <welcome-file>index.htm</welcome-file>
+  <welcome-file>index.jsp</welcome-file>
+  <welcome-file>default.html</welcome-file>
+  <welcome-file>default.htm</welcome-file>
+  <welcome-file>default.jsp</welcome-file>
+ </welcome-file-list>
+ <!-- Spring Security -->
+ <resource-ref>
+  <description>DataSource FinanceiroDB</description>
+  <res-ref-name>jdbc/FinanceiroDB</res-ref-name>
+  <res-type>javax.sql.DataSource</res-type>
+  <res-auth>Container</res-auth>
+ </resource-ref>
 </web-app>
