--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -91,10 +91,10 @@
  	</welcome-file-list>
  
  	<!-- Spring Security -->
- 	<resource-ref>
+ 	<!-- <resource-ref>
   		<description>DataSource FinanceiroDB</description>
   		<res-ref-name>jdbc/FinanceiroDB</res-ref-name>
   		<res-type>javax.sql.DataSource</res-type>
   		<res-auth>Container</res-auth>
- 	</resource-ref>
+ 	</resource-ref> -->
 </web-app>
