--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,44 +12,15 @@
  	<context-param>
   		<param-name>com.sun.faces.expressionFactory</param-name>
   		<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
- 	</context-param>
- 	<context-param>
-  		<param-name>contextConfigLocation</param-name>
-  		<param-value>/WEB-INF/applicationContext.xml
-				/WEB-INF/applicationContext-security.xml</param-value>
- 	</context-param>
+ 	</context-param> 	
  	<context-param>
   		<param-name>javax.faces.PROJECT_STAGE</param-name>
   		<param-value>Development</param-value>
  	</context-param>
  	
- 	<filter>
-  		<filter-name>springSecurityFilterChain</filter-name>
-  		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
- 	</filter>
- 	<filter>
-  		<filter-name>conexaoFilter</filter-name>
-  		<filter-class>financeiro.web.filter.ConexaoHibernateFilter</filter-class>
- 	</filter>
- 	<filter-mapping>
-  		<filter-name>springSecurityFilterChain</filter-name>
-  		<url-pattern>/*</url-pattern>
- 	</filter-mapping>
- 	<filter-mapping>
-  		<filter-name>conexaoFilter</filter-name>
-  		<url-pattern>*.jsf</url-pattern>
- 	</filter-mapping>
- 	<filter-mapping>
-  	<filter-name>conexaoFilter</filter-name>
-  		<url-pattern>/webservice/*</url-pattern>
- 	</filter-mapping>
- 	
- 	<listener>
-  		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
- 	</listener>
- 	<listener>
+ 	<!-- <listener>
   		<listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
- 	</listener>
+ 	</listener> -->
  	<!-- JavaServer Faces -->
  	<servlet>
   		<display-name>FacesServlet</display-name>
@@ -65,13 +36,13 @@
   		<load-on-startup>1</load-on-startup>
  	</servlet> -->
  	
- 	<servlet>
+ 	<!-- <servlet>
   		<description>Webservices do Financeiro</description>
   		<display-name>financeiroWS</display-name>
   		<servlet-name>financeiroWS</servlet-name>
   		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
   		<load-on-startup>1</load-on-startup>
- 	</servlet>
+ 	</servlet> -->
  	<servlet-mapping>
   		<servlet-name>FacesServlet</servlet-name>
   		<url-pattern>*.jsf</url-pattern>
@@ -88,13 +59,22 @@
  	
  	<welcome-file-list>
   		<welcome-file>index.xhtml</welcome-file>  		
- 	</welcome-file-list>
- 
- 	<!-- Spring Security -->
- 	<!-- <resource-ref>
-  		<description>DataSource FinanceiroDB</description>
-  		<res-ref-name>jdbc/FinanceiroDB</res-ref-name>
-  		<res-type>javax.sql.DataSource</res-type>
-  		<res-auth>Container</res-auth>
- 	</resource-ref> -->
+ 	</welcome-file-list> 	
+ 	
+ 	<security-constraint>
+            <web-resource-collection>
+                <web-resource-name>resources</web-resource-name>
+                <url-pattern>/*</url-pattern>
+                <http-method>GET</http-method>
+                <http-method>POST</http-method>
+            </web-resource-collection>
+            <auth-constraint>
+                <role-name>ADMIN</role-name>
+                <role-name>USUARIO</role-name>
+            </auth-constraint>
+    </security-constraint>	
+    
+    <security-role>
+            <role-name>ADMIN</role-name>
+    </security-role>
 </web-app>
