--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -66,6 +66,10 @@
         <error-code>403</error-code>
         <location>/publico/acesso-restrito.jsf</location>
     </error-page> 
+    
+    <session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
  	
  	<login-config>
             <auth-method>FORM</auth-method>            
