--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
-  <dependencies>
-
+  <dependencies>	
+  
+  	<dependency>
+		<groupId>com.sun.faces</groupId>
+		<artifactId>jsf-api</artifactId>
+		<version>2.2.13</version>
+	</dependency>
+	
 	<dependency>
-		<groupId>org.jboss.spec.javax.faces</groupId>
-		<artifactId>jboss-jsf-api_2.1_spec</artifactId>
-		<scope>provided</scope>
+		<groupId>com.sun.faces</groupId>
+		<artifactId>jsf-impl</artifactId>
+		<version>2.2.13</version>
 	</dependency>
 
 	<dependency>
@@ -88,15 +94,13 @@
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>4.4</version>
-		<scope>test</scope>
+		<version>4.4</version>		
 	</dependency>
 
 	<dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-all</artifactId>
-		<version>1.9.5</version>
-		<scope>test</scope>
+		<version>1.9.5</version>		
 	</dependency>	
 	
 	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
