--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,8 +39,15 @@
 		<session-timeout>30</session-timeout>
 	</session-config>
 	
+	<resource-ref>
+		<description>DataSource FinanceiroDB</description>
+		<res-ref-name>jdbc/FinanceiroDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+	
  	<!-- Security Config -->
- 	<login-config>
+ 	<!-- <login-config>
             <auth-method>FORM</auth-method>            
             <form-login-config>
                 <form-login-page>/publico/login.jsf</form-login-page>
@@ -77,6 +84,6 @@
     </security-role>
     <security-role>
             <role-name>ROLE_USUARIO</role-name>
-    </security-role>
+    </security-role> -->
     
 </web-app>
